<resources>
    <string name="app_name">Reliable</string>
    <string name="title_activity_home_page"></string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_reebook">Are you sure? You want to rebook this order</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_admin_home_page">Reliable</string>
    <string name="scaletype"><font fgcolor='#FF0000'> *</font> Choose Your Product Scale Type</string>
    <string name="close"><font fgcolor='#FF0000'> </font> Choose Your Product Scale Type</string>
    <string name="layertype"><font fgcolor='#FF0000'> *</font> Choose Product Layer Type</string>
    <string name="packtype"><font fgcolor='#FF0000'> *</font> Choose Product Pack Type</string>
    <string name="layertypebook"><font fgcolor='#FF0000'> *</font>Choose Layer Type</string>
    <string name="action_settings">Settings</string>
    <string name="action_logouts">Logout</string>
    <string name="bell">Notification</string>
    <string name="title_home">home</string>
    <string name="Search">Search</string>
    <string name="Master">master</string>
    <string name="Help_Center">Help</string>
    <string name="myEmployee">myEmp</string>
    <string name="myAccount">My Account</string>
    <string name="myjob">My Job</string>
    <string name="myOrder">My Order</string>
    <string name="mynotifi">Do you want notification for this order?</string>
    <string name="OrderSelect">Select Order for Rebook</string>
    <string name="AgreeForDesign">I am not satisfied as per design show in above</string>
    <string name="DesignChoose">Please select design for which you want to submit feedback</string>
    <string name="myProfile">My Profile</string>
    <string name="ORderPhoto">orderphoto</string>
    <string name="master">master</string>
    <string name="password">Change Password</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_next">Next</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_order_details">OrderDetails</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="printing">Printing is on Processed it will take some days for complete print</string>
    <string name="cylinderprep">Cylinder preparation is process where are Selected Design are implemented as cylinder.</string>
    <string name="inspection">Inspection in manufacturing includes measuring, examining, and testing</string>
    <string name="lamination">Lamination is the technique/process of manufacturing a material in multiple layers</string>
    //
    <string name="delivery">Pro </string>
    <string name="cutting">Slitting is the separation or opening of a physical object, into two or more portions</string>
    <string name="pouching">Pouching is the technique/process of pouch in which A pocket in which  products are pouched</string>
    <string name="packaging">Packaging can be described as a coordinated system of preparing goods for transport, warehousing, logistics, sale, and end use</string>
</resources>
