<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_box"
            android:title="@string/myProfile" />

        <item
            android:id="@+id/my_acc"
            android:icon="@drawable/rupay_logo"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/my_jobs"
            android:icon="@drawable/job_blue_24dp"
            android:title="@string/myjob" />
        <item
            android:id="@+id/my_order"
            android:icon="@drawable/shopping_cart"
            android:title="@string/myOrder" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/key"
            android:title="@string/password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/lock_open"
            android:title="logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_refer"
                android:icon="@drawable/link"
                android:title="Refer App" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="Feedback Company" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/send"
                android:title="Share" />
        </menu>
    </item>

</menu>
