<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearmain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/azure"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:outlineSpotShadowColor="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dialogfor_edittext"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/selectdesgin"

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/chips_packet" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/changecheck"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="Change Design" />

                    <Button
                        android:id="@+id/uploadImg"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/camera"
                        android:text="upload"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/imgurl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/productname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:fontFamily="serif"
                android:gravity="center_vertical|center"
                android:text="Product Name"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/productid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/light_blue"
                android:gravity="center_vertical|center"
                android:text="Product Name"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/weight_kg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_view_shape"
                    android:hint="Weight in KG"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/new_grey"
                    android:textSize="15sp" />


                <Spinner
                    android:id="@+id/layertype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:hint="@string/layertype"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/distempur"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/packType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:hint="@string/packtype"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/distempur"
                    android:textSize="15sp" />


                <Switch
                    android:id="@+id/notify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="@string/mynotifi" />

                <EditText
                    android:id="@+id/remarks"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_view_shape"
                    android:hint="Remarks For Design"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/new_grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"

                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
